WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
11136
REGRESSION: Safari snippet editor doesn't work
https://bugs.webkit.org/show_bug.cgi?id=11136
Summary
REGRESSION: Safari snippet editor doesn't work
mitz
Reported
2006-10-03 10:11:08 PDT
The snippet editor doesn't work in TOT (with Safari 2.0.4): when you click Show nothing happens.
Attachments
Add attachment
proposed patch, testcase, etc.
Alexey Proskuryakov
Comment 1
2006-10-06 05:39:56 PDT
Fixed by Maciej in
r16848
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug