        Reviewed by Adam.

- fixed the following bugs:

        http://bugs.webkit.org/show_bug.cgi?id=11136
        "REGRESSION: Safari snippet editor doesn't work"
        http://bugs.webkit.org/show_bug.cgi?id=11140
        "REGRESSION: view source window blank"
        http://bugs.webkit.org/show_bug.cgi?id=11146
        "REGRESSION: Instead of showing the error page, Safari opens its Resources folder in the Finder"

        Possibly more.

        * Loader/WebDocumentLoadState.h:
        * Loader/WebDocumentLoadState.m:
        (-[WebDocumentLoadState actualRequest]): New method.
        * WebView/WebDataSource.m:
        (-[WebDataSource _startLoading]): We need to make sure not to start loading the main
        resource with the fake external request for an applewebdata: request.



Canonical link: https://commits.webkit.org/14146@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@16848 268f45cc-cd09-0410-ab3c-d52691b4dbfc